whatami/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: whatami
  namespace: gjermund-spk
spec:
  replicas: 3
  selector:
    matchLabels:
      app: whatami
  template:
    metadata:
      labels:
        app: whatami
    spec:
      securityContext:
        runAsNonRoot: true
        runAsUser: 999
        runAsGroup: 999
        fsGroup: 999
        fsGroupChangePolicy: OnRootMismatch
        seccompProfile:
          type: RuntimeDefault
      containers:
        - name: whatami
          image: ghcr.io/traefik/whoami:latest
          securityContext:
            allowPrivilegeEscalation: false
            readOnlyRootFilesystem: true
            capabilities:
              drop: [ "ALL" ]
          ports:
            - name: http
              containerPort: 8080
          resources:
            requests:
              cpu: 10m
              memory: 12Mi
            limits:
              memory: 24Mi
