whatami/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: whatami
  namespace: gjermund-spk
spec:
  type: ClusterIP
  selector:
    app: whatami
  ports:
    - name: web
      port: 80
      targetPort: http
